# libcolorpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: color.h  hsl.h  hsv.h  rgb.h
samples/: CMakeLists.txt  cconv.cpp  hsl2rgb2hsl.cpp  hsv2rgb2hsv.cpp  rgb2hsl2rgb.cpp  rgb2hsv2rgb.cpp
samples/utils/: clparser.h
src/: hsl.cpp  hsv.cpp  rgb.cpp
test/: CMakeLists.txt  test.cpp
